--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
 .idea/
+.dart_tool/
+.flutter-plugins
+.flutter-plugins-dependencies
+ios/Flutter/Generated.xcconfig
+ios/Flutter/flutter_export_environment.sh
+linux/flutter/ephemeral/
+macos/Flutter/ephemeral/
+windows/flutter/ephemeral/
