Search page ended

--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,9 @@
 .dart_tool/
 .flutter-plugins
 .flutter-plugins-dependencies
-ios/Flutter/Generated.xcconfig
-ios/Flutter/flutter_export_environment.sh
+ios/
 linux/flutter/ephemeral/
 macos/Flutter/ephemeral/
 windows/flutter/ephemeral/
 build/
-android/local.properties
+android/
