--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,11 @@ dependencies:
 
   oauth2_client: ^3.3.0
   flutter_web_auth_2: ^3.1.2
+  flutter_dotenv: ^5.0.0
+  flutter_typeahead: ^5.2.0
+  loading_animation_widget: ^1.3.0
+  http: ^1.2.2
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
@@ -67,6 +72,8 @@ flutter:
   #   - images/a_dot_ham.jpeg
   assets:
     - assets/images/default.jpeg
+    - assets/images/placeholder.png
+    - assets/conf/conf
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
