--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   loading_animation_widget: ^1.3.0
   http: ^1.2.2
   provider: ^6.1.2
+  percent_indicator: ^4.2.4
 
 dev_dependencies:
   flutter_test:
